--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -97,7 +97,7 @@ color: #fff;
     display: flex;
     flex-direction: row;
     gap: 3rem;
-left: 69vw;
+left: 79.5vw;
 top: 4.8vh;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 font-style: normal;
@@ -110,7 +110,7 @@ color: #FEFEFE;
 
   .nav_tape_5{
     position: relative;
-    left: 45vw;
+    left: 35vw;
     top: 1.5vh;
     width: 600px;
     background-repeat: repeat-x;
@@ -122,7 +122,7 @@ color: #FEFEFE;
 
   .nav_tape_6{
     position: relative;
-    left: 25.5vw;
+    left: 20.5vw;
     top: 3.5vh;
     width: 500px;
     background-repeat: repeat-x;
@@ -217,11 +217,20 @@ color: #fff;
   }
   .logo2{
     position: absolute;
-    left: 90.5vw;
+    left: 43vw;
     top: 3.8vh;
+    display: flex;
+    gap: 3rem;
 
   }
-
+  .logoss{
+    height: 40px;
+    width:100px;
+  }
+  .logos_juh{
+    height: 40px;
+    width:130px;
+  }
   .analysis1{
     position: absolute;
     z-index: 2000;
@@ -869,6 +878,7 @@ background-color: #000;
       background-color: #FFFFFF;
       border-radius: 10px;
       padding: 5px;
+      
     }
     .base_map_name {
       font-size: 15px;
