changed navigation bar to have a radial gradient

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -68,7 +68,8 @@ width: 100vw;
 height: 103px;
 z-index: 1000;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-background-color: #000;
+/* background-color: #000; */
+background: radial-gradient(50% 50% at 50% 50%, #FFFFFF 0%, rgba(233, 233, 234, 0.93) 19.27%, #0C0D0D 100%);
 /* background: linear-gradient(180deg, rgba(12, 13, 13, 0.984863) 0%, rgba(151, 151, 152, 0.908383) 57.29%, rgba(255, 255, 255, 0.50228) 100%); */
   }
 
@@ -217,19 +218,21 @@ color: #fff;
   }
   .logo2{
     position: absolute;
-    left: 43vw;
+    left: 40vw;
     top: 3.8vh;
     display: flex;
     gap: 3rem;
 
   }
+  
   .logoss{
     height: 40px;
     width:100px;
   }
   .logos_juh{
-    height: 40px;
-    width:130px;
+    height: 50px;
+    width:160px;
+    margin-top: -8px;
   }
   .analysis1{
     position: absolute;
