--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -69,7 +69,7 @@ height: 103px;
 z-index: 1000;
 font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 /* background-color: #000; */
-background: radial-gradient(50% 50% at 50% 50%, #FFFFFF 0%, rgba(233, 233, 234, 0.93) 19.27%, #0C0D0D 100%);
+background: radial-gradient(50% 50% at 50% 50%, rgba(170, 170, 170, 0.93) 19.27%, #0C0D0D 100%);
 /* background: linear-gradient(180deg, rgba(12, 13, 13, 0.984863) 0%, rgba(151, 151, 152, 0.908383) 57.29%, rgba(255, 255, 255, 0.50228) 100%); */
   }
 
@@ -232,12 +232,26 @@ color: #fff;
   .logoss_kp{
     position: relative;
     top:-1.5vh;
+    left: -1vw;
     height: 70px;
     width:80px;
     /* background-color: #224092; */
   }
+  #john{
+    position: relative;
+    top: .5vh;
+    left: -1.3vw;
+    height: 37px;
+    
+  }
+  #juh{
+    position: relative;
+    top: 1.3vh;
+    left: -1.1vw;
+    
+  }
   .logos_juh{
-    height: 50px;
+    height: 40px;
     width:160px;
     margin-top: -8px;
   }
