--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -334,6 +334,171 @@ color: #fff;
 }
 
 
+@media screen and (max-width:1400px) { 
+  #chart_container{
+    position: absolute;
+    left: 35.6vw;
+    width: 450px;
+  }
+
+  #legend_cross {
+    position: absolute;
+      top: -8vh;
+      left: 34vw;
+      
+      height: 12px;
+      z-index: 5000;
+     
+    }
+    .close_chart_container{
+      position: absolute;
+    top:1.5vh;
+    left: 31vw;
+
+    }
+
+
+  #analysis_panel{
+    position: absolute;
+    top: -6vh !important;
+    width: 442px;
+    height: 150px;
+   
+  }
+
+  #analysis_cross{
+    position: absolute;
+    top:22vh;
+    left: 25.5vw;
+    z-index: 2500;
+
+  }
+  #desc{
+    position: absolute;
+    top: 20vh;
+    left: 37vw;
+    width: 27vw;
+    height: 39vh;
+  
+  }
+  #emoji{
+    position: absolute;
+    top: 4vh;
+    left: 2.5vw;
+    
+  }
+  #desc_text{
+    position: absolute;
+    top: 3vh;
+    padding: 10px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 400;
+
+  }
+  #tagline{
+    position: absolute;
+    top: 8vh;
+    left: 1vw;
+    width: 400px;
+
+  }
+
+  .logo2{
+    position: absolute;
+    left: 31vw;
+    top: 3.8vh;
+    display: flex;
+    gap: 0.5rem;
+
+  }
+
+  #juh{
+    position: relative;
+    top: 1.3vh;
+    left: 0.5vw;
+    
+  }
+
+  #links{
+    
+      position: absolute;
+      justify-content: space-around;
+      display: flex;
+      flex-direction: row;
+      gap: 2rem;
+  left: 75.5vw;
+  top: 4.8vh;
+  }
+
+  #info{
+    position: absolute;
+    top: 35vh;
+    left: 72vw;
+    z-index: 2000;
+    width: 351px;
+    height: 450px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #000;
+    border-radius: 20px;
+    padding: 10px;
+    }
+
+    #close_info{
+      position: absolute;
+      top:3.5vh;
+      left: 25vw;
+    }
+
+
+    #pin{
+      position: absolute;
+      top: 12vh;
+      left: 13vw !important;
+      height: 50px;
+
+
+    }
+    #tape_5{
+      position: absolute;
+      top: 3vh;
+width: 350px;
+height: 39.88px;
+
+/* background: url('./images/tape_5.png'); */
+z-index: 2500;
+transform: rotate(-4deg);
+    }
+
+    #tape_10{
+      position: absolute;
+      top: 47vh;
+width: 350px;
+height: 39.88px;
+
+/* background: url('./images/tape_5.png'); */
+z-index: 2500;
+transform: rotate(-4deg);
+    }
+
+    #slideshow{
+      position: absolute;
+      top: -5vw !important;
+    }
+    #video{
+      position: absolute;
+      top: -8vw !important;
+    }
+    #view_stats{
+      position: absolute;
+      left: 13vw !important;
+    }
+
+
+
+
+}
+
+
 @media screen 
 and (min-device-width: 1200px) 
 and (max-device-width: 1600px) 
